# Arena-allocator

./: .gitignore  CMakeLists.txt  README.md
include/: arena.hpp
tests/: benchmark.cpp  test.cpp
